[project]
name = "wan2gp"
version = "0.1.0"
description = "Wan2GP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mmgp==3.7.6",
    "diffusers==0.36.0",
    "transformers==4.54.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "tqdm",
    "imageio",
    "imageio-ffmpeg",
    "einops",
    "sentencepiece",
    "open-clip-torch>=2.29.0",
    "numpy==2.1.2",
    "num2words==0.5.14",
    "moviepy==1.0.3",
    "av",
    "ffmpeg-python",
    "pygame>=2.1.0",
    "sounddevice>=0.4.0",
    "soundfile",
    "mutagen",
    "pyloudnorm",
    "librosa==0.11.0",
    "speechbrain==1.0.3",
    "audio-separator==0.36.1",
    "pyannote.audio==3.3.2",
    "torchcodec",
    "gradio==5.29.0",
    "dashscope",
    "loguru",
    "s3tokenizer",
    "conformer==0.3.2",
    "spacy-pkuseg",
    "spacy",
    "gradio-rangeslider",
    "opencv-python>=4.12.0.88",
    "segment-anything",
    "rembg==2.0.65",
    "decord2==3.0.0",
    "onnxruntime",
    "timm",
    "insightface==0.7.3 ; sys_platform == 'linux' and platform_machine != 'aarch64'",
    "insightface @ https://github.com/deepbeepmeep/insightface/releases/download/insightface/insightface-0.7.3-cp310-cp310-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.10'",
    "insightface @ https://github.com/deepbeepmeep/insightface/releases/download/insightface/insightface-0.7.3-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "insightface @ https://github.com/deepbeepmeep/insightface/releases/download/insightface/insightface-0.7.3-cp312-cp312-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.12'",
    "facexlib==0.3.0",
    "taichi ; platform_machine != 'aarch64'",
    "vector-quantize-pytorch==1.27.19",
    "chumpy @ https://github.com/deepbeepmeep/chumpy/releases/download/v0.71/chumpy-0.71-py3-none-any.whl",
    "smplfitter @ https://github.com/deepbeepmeep/smplfitter/releases/download/v0.2.10/smplfitter-0.2.10-py3-none-any.whl",
    "omegaconf",
    "hydra-core",
    "easydict",
    "pydantic==2.10.6",
    "torchdiffeq>=0.2.5",
    "tensordict>=0.6.1",
    "peft==0.17.0",
    "matplotlib",
    "gguf==0.17.1",
    "ftfy",
    "piexif",
    "nvidia-ml-py",
    "misaki",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "stringzilla==4.0.14",
    "xxhash",
    "munch",
    "wetext==0.1.2",
    "torch",
    "torchvision",
    "torchaudio"
]

[project.optional-dependencies]
dgx-spark = []

[tool.uv]
python = "3.11.14"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
torchcodec = { index = "pytorch-cu130" }
